# njtech-mc-backend

./: .dockerignore  .drone.yml  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  readme.md
migrations/2022-02-10-181042_user/: down.sql  up.sql
src/: error.rs  main.rs  schema.rs
src/app/: mail.rs  mod.rs  users.rs
src/app/oauth/: form.rs  mod.rs
src/app/users/: form.rs  mod.rs
src/db/: mod.rs  oauth.rs  user.rs
src/models/: user.rs
src/util/: jwt.rs  mail.rs  mod.rs
