[package]
name = "njtech-mc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.21"
actix-cors = "0.6.0-beta.10"
actix-service = "2.0.2"
actix-http = "3.0.0-beta.19"
actix-rt = "2.6.0"
actix-identity = "0.4.0-beta.9"
awc = { version = "3.0.0-beta.21", features = ["openssl"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["mysql", "chrono", "r2d2", "serde_json"] }
dotenv = "0.15.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
erased-serde = "0.3"
futures = "0.3.21"
rand = "0.8.5"
redis = "0.21.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1"
lazy_static = "1.4.0"
num_cpus = "1.13.1"
validator = "0.14.0"
validator_derive = "0.14.0"
